--- a/uiDBAnbindung.ui
+++ b/uiDBAnbindung.ui
@@ -67,10 +67,28 @@
             </item>
             <item>
              <property name="text">
-              <string>V 2016-2019</string>
+              <string>V 16-19.2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>V 19.3</string>
              </property>
             </item>
            </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
@@ -116,6 +134,13 @@
              </widget>
             </item>
            </layout>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="chkPwdAuslesen">
+            <property name="text">
+             <string>Datenbankpasswort aus Konfiguration auslesen</string>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
